Password reset strength

--- a/core/static/css/common.css
+++ b/core/static/css/common.css
@@ -14,7 +14,7 @@
     text-transform: none;
     font-weight: 100;
     margin-bottom: 0;
-    text-align: center;
+    text-align: left;
 }
 .header6{
     font-size:1.5vw;
