--- a/core/templates/authenticated/password.html
+++ b/core/templates/authenticated/password.html
@@ -1,14 +1,34 @@
 {% extends "authenticated/base.html" %}
+{% load staticfiles %}
+
+{% block authenticated_body_css %}
+    <link rel="stylesheet" href="{% static "css/password_strength.css" %}" type="text/css"/>
+{% endblock authenticated_body_css %}
+
 {% block authenticated_body %}
     <h5 class="well col-md-10 topheader header5">Reset Password</h5><br></br>
     <div class='row'>
-        <p> &nbsp Fill in the following details to reset your password </p>
-        <form action= '{% url 'password' %}' method='post'>{% csrf_token %}
-
-
-            {{ vm.authenticated_body.form.as_p }}
-
+    <form id='register' action= '{% url 'password' %}' method='post'>
+        <p id='password_reset_text'> Fill in the following details to reset your password : </p>
+            {% csrf_token %}
+            {{ vm.authenticated_body.form.non_field_errors }}
+            <div class="fieldWrapper">
+                {{ vm.authenticated_body.form.old_password.errors }}
+                <label class='password_input'for="{{ vm.authenticated_body.form.old_password.id_for_label }}">Old Password:</label>
+                <div class='input_box'>
+                    {{ vm.authenticated_body.form.old_password }}
+                </div>
+            </div>
+            <br>
+            {% include "authenticated/widgets/password_change.html" with form=vm.authenticated_body.form %}
+            <br>
             <input type='submit' value='Submit'/>
         </form>
     </div>
 {% endblock %}
+
+{% block authenticated_body_js %}
+    <script type="text/javascript" src="{% static "js/password_strength.js" %}"></script> 
+{% endblock authenticated_body_js %}
+
+
