--- a/core/templates/authenticated/widgets/teacher_listing.html
+++ b/core/templates/authenticated/widgets/teacher_listing.html
@@ -3,7 +3,7 @@
         <h4 class="header header4">List of Teachers</h4><br>
 
         <div class="row scroll">
-            <table id="announcement_table" class="table table-condensed table-striped table-hover" cellspacing='0'> <!-- cellspacing='0' is important, must stay -->
+            <table id="teacher_listing" class="table table-condensed table-striped table-hover" cellspacing='0'> <!-- cellspacing='0' is important, must stay -->
                 <thead>
                     <tr>
                         <th class="largecol">Name</th>
