--- a/core/templates/password/forgot_password_confirm.html
+++ b/core/templates/password/forgot_password_confirm.html
@@ -1,14 +1,23 @@
 {% extends "base.html" %}
+
+{% block css %}
+    <link rel="stylesheet" href="{% static "css/password_strength.css" %}" type="text/css"/>
+{% endblock css %}
 {% block body %}
     <h4 class='well col-md-12'> Reset your Password</h4>
     {% if validlink %}
-        <p> &nbsp Enter your email id below. An Email will be sent to you with instructions on how to recover your passowrd </p>
-            <form method="post">
+         <p id='password_reset_text'> Fill in the following details to reset your password : </p>
+            <form id='register'method="post">
                 {% csrf_token %}
-                {{ form.as_p }}
+                {{ form.non_field_errors }}
+                {% include "authenticated/widgets/password_change.html" %}
                 <button type="submit">Submit</button>
             </form>
     {% else %}
         <p>This reset link is no longer valid!</p>
     {% endif %}
 {% endblock %}
+
+{% block js %}
+    <script type="text/javascript" src="{% static "js/password_strength.js" %}"></script> 
+{% endblock js %}
