password change changes

--- a/core/templates/authenticated/password.html
+++ b/core/templates/authenticated/password.html
@@ -8,7 +8,7 @@
 {% block authenticated_body %}
     <h5 class="well col-md-10 topheader header5">Reset Password</h5><br></br>
     <div class='row'>
-    <form id='register' action= '{% url 'password' %}' method='post'>
+    <form class='password_change' action= '{% url 'password' %}' method='post'>
         <p id='password_reset_text'> Fill in the following details to reset your password : </p>
             {% csrf_token %}
             {{ vm.authenticated_body.form.non_field_errors }}
