--- a/core/static/css/password_strength.css
+++ b/core/static/css/password_strength.css
@@ -1,10 +1,10 @@
-#register {
+.password_change {
     margin-left:215px;  
 }
-#register label{
+.password_change label{
     margin-right:5px;
 }
-#register input {
+.password_change input {
     padding:5px 7px;
     border:1px solid #d5d9da;
     box-shadow: 0 0 5px #e8e9eb inset;
@@ -17,19 +17,19 @@
     margin-left:5px;
 }
 
-#register .short{
+.password_change .short{
     color:#FF0000;
 }
 
-#register .weak{
+.password_change .weak{
     color:#E66C2C;
 }
 
-#register .good{
+.password_change .good{
     color:#2D98F3;
 }
 
-#register .strong{
+.password_change .strong{
     color:#006400;
 }
 
