--- a/core/templates/password/forgot_password_confirm.html
+++ b/core/templates/password/forgot_password_confirm.html
@@ -7,7 +7,7 @@
     <h4 class='well col-md-12'> Reset your Password</h4>
     {% if validlink %}
          <p id='password_reset_text'> Fill in the following details to reset your password : </p>
-            <form id='register'method="post">
+            <form class='password_change' method="post">
                 {% csrf_token %}
                 {{ form.non_field_errors }}
                 {% include "authenticated/widgets/password_change.html" %}
