final final changes to mobile sniffing

--- a/core/templates/authenticated/base.html
+++ b/core/templates/authenticated/base.html
@@ -6,7 +6,7 @@
 {% load staticfiles %}
 
 {% block css %}
-    <link rel="stylesheet" href="{% static "css/common.css" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "css/authenticated_base.css" %}" type="text/css"/>
     <link rel="stylesheet" href="{% static "css/sidebar.css" %}" type="text/css"/>
     <link rel="stylesheet" href="{% static "css/dataTables.min.css" %}" type="text/css"/>
     {# So that each extending template can include its own stylesheet #}
