--- a/core/templates/authenticated/base.html
+++ b/core/templates/authenticated/base.html
@@ -16,7 +16,7 @@
 {% block js %}
 <script type="text/javascript" src="{% static "js/loading.js" %}"></script> 
 <script type="text/javascript" src="{% static "js/dataTables.min.js" %}"></script> 
-<script type="text/javascript" src="{% static "js/common.js" %}"></script>
+<script type="text/javascript" src="{% static "js/authenticated_base.js" %}"></script>
 {% block authenticated_body_js %}{% endblock authenticated_body_js %} 
 {% endblock js %}
 
