--- a/core/templates/authenticated/home/student.html
+++ b/core/templates/authenticated/home/student.html
@@ -8,6 +8,7 @@
 
 {% block home_css %}
     <link rel="stylesheet" href="{% static "css/home/student.css" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "css/calculator.css" %}" type="text/css"/>
 {% endblock home_css %}
 
 {% block home_body %}
@@ -28,9 +29,10 @@
 {% endblock home_body %}
 
 {% block home_js %}
-    <script type="text/javascript" src="{% static "js/calculator.js" %}"></script> 
+    
     <script type="text/javascript" src="{% static "js/printbutton.js" %}"></script> 
-    <script type="text/javascript" src="{% static "js/charts/assignment_performance.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/charts/section_assignment_performance.js" %}"></script>
     <script type="text/javascript" src="{% static "js/charts/performance_report.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/charts/performance_breakdown.js" %}"></script>         
+    <script type="text/javascript" src="{% static "js/charts/performance_breakdown.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/calculator.js" %}"></script>          
 {% endblock home_js %}
