--- a/core/templates/authenticated/widgets/calculator_tools.html
+++ b/core/templates/authenticated/widgets/calculator_tools.html
@@ -1,1 +1,25 @@
-<button id="calc_button">open the dialog</button>
+{% load staticfiles %}
+
+<button class='btn btn-default' id="calc_button">Calculator</button>
+<div id="calculator_box" title="Calculator">
+    <img class="calc_option" src="{% static 'img/calculator/cube.png' %}">
+    <img class="calc_option" src="{% static 'img/calculator/cube_root.png' %}">
+    <img class="calc_option" src="{% static 'img/calculator/division.png' %}">
+    <img class="calc_option" src="{% static 'img/calculator/multiplication.png' %}">
+    <img class="calc_option" src="{% static 'img/calculator/square.png' %}">
+    <img class="calc_option" src="{% static 'img/calculator/square_root.png' %}">
+</div>
+ 
+<script type="text/javascript">
+$( "#calculator_box" ).dialog({ 
+    autoOpen: false 
+});
+
+$( "#calc_button" ).click(function() {
+  $( "#calculator_box" ).dialog( "open" );
+});
+</script>
+
+
+
+
