--- a/core/templates/authenticated/widgets/maths_toolbox.html
+++ b/core/templates/authenticated/widgets/maths_toolbox.html
@@ -2,12 +2,12 @@
 
 <button class='btn btn-default' id="toolbox_button">Maths Toolbox</button>
 <div id="maths_toolbox" title="&nbsp Maths Toolbox">
-    <img class="toolbox_option top_row" title="Cube" onclick=AddText("^3") src="{% static 'img/maths_toolbox/cube.png' %}">
-    <img class="toolbox_option top_row" title="Cube Root" onclick=AddText("^(1/3)") src="{% static 'img/maths_toolbox/cube_root.png' %}">
-    <img class="toolbox_option top_row" title="Division" onclick=AddText("/") src="{% static 'img/maths_toolbox/division.png' %}">
-    <img class="toolbox_option bot_row" title="Multiplication" onclick=AddText("*") src="{% static 'img/maths_toolbox/multiplication.png' %}">
-    <img class="toolbox_option bot_row" title="Square" onclick=AddText("^2") src="{% static 'img/maths_toolbox/square.png' %}">
-    <img class="toolbox_option bot_row" title="Square Root" onclick=AddText("^(1/2)") src="{% static 'img/maths_toolbox/square_root.png' %}">
+    <img class="toolbox_option top_row" title="Cube" onclick=addtext("^3") src="{% static 'img/maths_toolbox/cube.png' %}">
+    <img class="toolbox_option top_row" title="Cube Root" onclick=addtext("^(1/3)") src="{% static 'img/maths_toolbox/cube_root.png' %}">
+    <img class="toolbox_option top_row" title="Division" onclick=addtext("/") src="{% static 'img/maths_toolbox/division.png' %}">
+    <img class="toolbox_option bot_row" title="Multiplication" onclick=addtext("*") src="{% static 'img/maths_toolbox/multiplication.png' %}">
+    <img class="toolbox_option bot_row" title="Square" onclick=addtext("^2") src="{% static 'img/maths_toolbox/square.png' %}">
+    <img class="toolbox_option bot_row" title="Square Root" onclick=addtext("^(1/2)") src="{% static 'img/maths_toolbox/square_root.png' %}">
 </div>
  
 
