--- a/core/templates/authenticated/password.html
+++ b/core/templates/authenticated/password.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <br>
-            {% include "authenticated/widgets/password_change.html" with form=vm.authenticated_body.form %}
+        {% include "authenticated/widgets/password_change.html" with form=vm.authenticated_body.form only %}
             <br>
             <input type='submit' value='Submit'/>
         </form>
