--- a/core/templates/authenticated/widgets/maths_toolbox.html
+++ b/core/templates/authenticated/widgets/maths_toolbox.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 
 <button class='btn btn-default' id="toolbox_button">Maths Toolbox</button>
-<div id="maths_toolbox" title="&nbsp Maths Toolbox">
+<div id="maths_toolbox" title=" The Maths Toolbox">
     <img class="toolbox_option top_row" title="Cube" onclick=addtext("^3") src="{% static 'img/maths_toolbox/cube.png' %}">
     <img class="toolbox_option top_row" title="Cube Root" onclick=addtext("^(1/3)") src="{% static 'img/maths_toolbox/cube_root.png' %}">
     <img class="toolbox_option top_row" title="Division" onclick=addtext("/") src="{% static 'img/maths_toolbox/division.png' %}">
