--- a/core/templates/authenticated/password_success.html
+++ b/core/templates/authenticated/password_success.html
@@ -2,7 +2,9 @@
 {% block body %}
     <h4 class='well col-md-12'> Reset your Password</h4>
     <form action= {% url 'home' %}>
-        &nbsp You have successfully changed your password !<br>
-        &nbsp <input type='submit' value='Return to home'/>
+        <div class="indented_body_left">
+            You have successfully changed your password !<br>
+            <input type='submit' value='Return to home'/>
+        </div>
     </form>
 {% endblock body %}
