--- a/core/templates/password/forgot_password_complete.html
+++ b/core/templates/password/forgot_password_complete.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block body %}
-<p> &nbsp Your password has been updated.  You may go ahead and log in now.</p>
-<p><a href="{% url 'login' %}">Go to Log in</a></p>
+    <div class="indented_body_left">
+        <p> Your password has been updated.  You may go ahead and log in now.</p>
+        <p><a href="{% url 'login' %}">Go to Log in</a></p>
+    </div>
 {% endblock %}
