--- a/core/templates/password/forgot_password_done.html
+++ b/core/templates/password/forgot_password_done.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% block body %}
 <h4 class='well col-md-12'> Reset your Password</h4>
-<p> &nbsp  If your entered email was registered with us, you will receive the instructions for password reset shortly. </p>
-<p>  &nbsp You should receive an email within the next 30 minutes. </p>
-
+<div class="indented_body_left">
+    <p> If your entered email was registered with us, you will receive the instructions for password reset shortly. </p>
+    <p> You should receive an email within the next 30 minutes. </p>
+</div>
 {% endblock %}
