--- a/core/templates/password/forgot_password_confirm.html
+++ b/core/templates/password/forgot_password_confirm.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load staticfiles %}
+
 {% block css %}
     <link rel="stylesheet" href="{% static "css/password_strength.css" %}" type="text/css"/>
 {% endblock css %}
