date time picker widget

--- a/core/templates/authenticated/home/student.html
+++ b/core/templates/authenticated/home/student.html
@@ -19,6 +19,7 @@
     {% include "authenticated/widgets/printable_performance.html" %}
     {% include "authenticated/widgets/maths_toolbox.html" %}
     {% include "authenticated/widgets/section_chart_popup.html" %}
+    {% include "authenticated/widgets/date_time_picker.html" %}
 </div>    <!-- Assignment Div -->
 
 <div class='row'>
