simple validation for to and from dates

--- a/core/templates/authenticated/widgets/date_time_picker.html
+++ b/core/templates/authenticated/widgets/date_time_picker.html
@@ -1,7 +1,7 @@
 <div class="pickadate">
     <div class='col-md-3'>
         <h6 class="header header6"> Assigned Date </h6>
-        <input class="date_picker">
+        <input id='assigned_date' class="date_picker">
         <span class="input_box_graphic">
             <span class="glyphicon glyphicon-calendar"> </span>
         </span>   
@@ -13,7 +13,7 @@
     </div>
     <div class='col-md-3'>
         <h6 class="header header6"> Submission Date </h6>
-        <input class="date_picker">
+        <input id="submission_date" class="date_picker">
         <span class="input_box_graphic">
             <span class="glyphicon glyphicon-calendar"> </span>
         </span>   
