success modal right now some more integration with backend is required but basic setup is there you can play around with it

--- a/core/templates/authenticated/home/student.html
+++ b/core/templates/authenticated/home/student.html
@@ -20,6 +20,7 @@
     {% include "authenticated/widgets/maths_toolbox.html" %}
     {% include "authenticated/widgets/section_chart_popup.html" %}
     {% include "authenticated/widgets/date_time_picker.html" %}
+    {% include "authenticated/widgets/success_message.html" %}
 </div>    <!-- Assignment Div -->
 
 <div class='row'>
