--- a/core/templates/reset_password/complete.html
+++ b/core/templates/reset_password/complete.html
@@ -2,6 +2,6 @@
 {% block body %}
     <div class="indented_body_left">
         <p> Your password has been updated.  You may go ahead and log in now.</p>
-        <p><a href="{% url 'login' %}">Go to Log in</a></p>
+        <p><a href="{{ login_url }}">Go to Log in</a></p>
     </div>
 {% endblock %}
