--- a/hwcentral/templates/base.html
+++ b/hwcentral/templates/base.html
@@ -7,11 +7,10 @@
 
     <!-- Title -->
 
-    <title>{% block title %}HW Central{% endblock title %}</title>
+    <title>HW Central - {% block title %}Education For The New Generation{% endblock title %}</title>
 
     <!-- Meta -->
 
-    {% include "base_meta.html" %}
     {% block meta %}{% endblock meta %}
 
     <!-- Favicon -->
@@ -39,6 +38,24 @@
 </head>
 
 <body>
+<!-- Google Tag Manager -->
+<noscript>
+    <iframe src="//www.googletagmanager.com/ns.html?id=GTM-TJZWJQ"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<script>(function (w, d, s, l, i) {
+    w[l] = w[l] || [];
+    w[l].push({
+        'gtm.start': new Date().getTime(), event: 'gtm.js'
+    });
+    var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+    j.async = true;
+    j.src =
+            '//www.googletagmanager.com/gtm.js?id=' + i + dl;
+    f.parentNode.insertBefore(j, f);
+})(window, document, 'script', 'dataLayer', 'GTM-TJZWJQ');</script>
+<!-- End Google Tag Manager -->
 <div>
 
     <!-- Header -->
