--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -2,6 +2,11 @@
 
 {% load staticfiles %}
 
+{% block meta %}
+    <meta name="description"
+          content="HomeWork Central HWCentral streamlines Homework for Indian Schools by using a cloud-based web platform to automate correction&#39; prevent plagiarism&#39; provide powerful analytics and reduce teachers workload&#46;"/>
+{% endblock %}
+
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/index.css' %}" type="text/css"/>  
 {% endblock css%}
