--- a/core/templates/authenticated/settings/common_account.html
+++ b/core/templates/authenticated/settings/common_account.html
@@ -1,4 +1,4 @@
-<h6 class="header header6">Name : </h6> {{ user.first_name }} {{ user.last_name }}<br>
-<h6 class="header header6">User ID : </h6> {{ user.username }}<br>
-<h6 class="header header6">Email ID : </h6> {{ user.email }}  <br>
-<h6 class="header header6">School : </h6>{{ vm.authenticated_body.school }}</h4><br>
+<h6 class="header header6">Name : </h6> {{ settings_common.user_label }}<br>
+<h6 class="header header6">User ID : </h6> {{ settings_common.username }}<br>
+<h6 class="header header6">Email ID : </h6> {{ settings_common.email }}  <br>
+<h6 class="header header6">School : </h6>{{ settings_common.school }}<br>
