--- a/core/templates/authenticated/widgets/assignment_create.html
+++ b/core/templates/authenticated/widgets/assignment_create.html
@@ -1,1 +1,3 @@
-<button class="btn btn-warning"> Create an Assignment ! </button>
+<a href="{% url 'assignment' %}">
+    <button class="btn">Assign HomeWork</button>
+</a>
