--- a/core/templates/authenticated/widgets/standard_chart_popup.html
+++ b/core/templates/authenticated/widgets/standard_chart_popup.html
@@ -8,7 +8,7 @@
         <h4 class="modal-title"> Assignment Performance Distribution</h4>
       </div>
       <div class="modal-body">
-        {% include "authenticated/charts/standard_assignment_performance.html" %}
+          {% include "authenticated/charts/standard_assignment_performance.html" only %}
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
