--- a/core/templates/authenticated/widgets/student_subjectroom_performance.html
+++ b/core/templates/authenticated/widgets/student_subjectroom_performance.html
@@ -1,6 +1,6 @@
 <h6 class="header header6 perf"> Subject Room Performance</h6>
 <div id="student_subjectroom_performance">
     <div id="single_subjectroom_bargraph" class='chart scroll'>
-         {% include "authenticated/charts/chart_loader.html" %}
+        {% include "authenticated/charts/chart_loader.html" only %}
     </div>
 </div>
