--- a/hwcentral/templates/footer.html
+++ b/hwcentral/templates/footer.html
@@ -3,6 +3,7 @@
 
     <ul class="nav navbar-nav footer">
         <li><a href="{% url 'about' %}">About Us</a></li>
-        <li><a href="mailto:contact@hwcentral.in" >Email : contact@homeworkcentral.in</a> <li>
+        <li><a href="mailto:contact@hwcentral.in">Email : contact@hwcentral.in</a>
+        <li>
     </ul>
 </div>
