--- a/core/templates/authenticated/classroom_id/admin.html
+++ b/core/templates/authenticated/classroom_id/admin.html
@@ -2,14 +2,14 @@
 
 {% load staticfiles %}
 {% block sidebar %}
-        {% include "authenticated/sidebar/admin.html" %}
+    {% include "authenticated/sidebar/admin.html" with sidebar=vm.sidebar only %}
 {% endblock %}
 
 {% block classroom_css %}{% endblock classroom_css %}
 
 {% block classroom_body %}
 <div class='col-md-10'>
-    {% include "authenticated/widgets/classroom_performance.html" %}
+    {% include "authenticated/widgets/classroom_performance.html" only %}
 </div>
 
 {% endblock classroom_body %}
