--- a/core/templates/authenticated/classroom_id/student.html
+++ b/core/templates/authenticated/classroom_id/student.html
@@ -2,7 +2,7 @@
 
 {% load staticfiles %}
 {% block sidebar %}
-        {% include "authenticated/sidebar/student.html" %}
+    {% include "authenticated/sidebar/student.html" with sidebar=vm.sidebar only %}
 {% endblock %}
 
 {% block classroom_css %}{% endblock classroom_css %}
@@ -10,7 +10,7 @@
 {% block classroom_body %}
 
 <div class='col-md-10'>
-    {% include "authenticated/charts/performance_breakdown.html" %}
+    {% include "authenticated/charts/performance_breakdown.html" only %}
 </div>
 
 
