--- a/core/templates/authenticated/home/student.html
+++ b/core/templates/authenticated/home/student.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 
 {% block sidebar %}
-    {% include "authenticated/sidebar/student.html" %}
+    {% include "authenticated/sidebar/student.html" with sidebar=vm.sidebar only %}
 {% endblock sidebar %}
 
 {% block home_css %}
@@ -14,14 +14,15 @@
 
   <!-- Performance Div -->
 <div class='col-md-10'>
-    {% include "authenticated/widgets/student_performance.html" %}
-    {% include "authenticated/widgets/printable_performance.html" %}
-    {% include "authenticated/widgets/section_chart_popup.html" %}
-</div>    
     <!-- Assignment Div -->
+    {% include "authenticated/widgets/student_performance.html" with name=vm.sidebar.userinfo.name only %}
+    {% include "authenticated/widgets/printable_performance.html" with name=vm.sidebar.userinfo.name only %}
+    {% include "authenticated/widgets/section_chart_popup.html" only %}
+</div>    <!-- Assignment Div -->
+
 <div class='row'>
-    {% include "authenticated/widgets/active_assignment.html" %}
-    {% include "authenticated/widgets/graded_assignment.html" %}
+    {% include "authenticated/widgets/active_assignment.html" with active_assignments=vm.authenticated_body.active_assignments only %}
+    {% include "authenticated/widgets/graded_assignment.html" with graded_assignments=vm.authenticated_body.graded_assignments only %}
 </div>
 
 {% endblock home_body %}
