--- a/core/templates/authenticated/home/teacher.html
+++ b/core/templates/authenticated/home/teacher.html
@@ -2,7 +2,7 @@
 
 {% load staticfiles %}
 {% block sidebar %}
-    {% include "authenticated/sidebar/teacher.html" %}
+    {% include "authenticated/sidebar/teacher.html" with sidebar=vm.sidebar only %}
 {% endblock sidebar %}
 
 {% block home_css %}
@@ -12,15 +12,16 @@
 {% block home_body %}
 
     <div class='col-md-10'>
-        {% include "authenticated/widgets/assignment_create.html" %}
-        {% include "authenticated/charts/subjectroom_performance_breakdown.html" %}
-        {% include "authenticated/widgets/section_chart_popup.html" %}
-        {% include "authenticated/widgets/standard_chart_popup.html" %}
+        {% include "authenticated/widgets/assignment_create.html" only %}
+        {% include "authenticated/widgets/announcement_create.html" only %}
+        {% include "authenticated/charts/subjectroom_performance_breakdown.html" only %}
+        {% include "authenticated/widgets/section_chart_popup.html" only %}
+        {% include "authenticated/widgets/standard_chart_popup.html" only %}
     </div>
 <!-- Assignment Div -->
     <div class='row'>
-        {% include "authenticated/widgets/active_assignment.html" %}
-        {% include "authenticated/widgets/graded_assignment.html" %}
+        {% include "authenticated/widgets/active_assignment.html" with active_assignments=vm.authenticated_body.active_assignments only %}
+        {% include "authenticated/widgets/graded_assignment.html" with graded_assignments=vm.authenticated_body.graded_assignments only %}
     </div>    
 
 
