--- a/core/templates/authenticated/sidebar/admin.html
+++ b/core/templates/authenticated/sidebar/admin.html
@@ -1,7 +1,7 @@
 {% extends "authenticated/sidebar/base.html" %}
 {% block sidebar_content %}
 	<h6 class='sidebarheader header6'> Classrooms </h6>
-    {% for classroom in vm.sidebar.listings %}
-		{% include "authenticated/sidebar/classroom.html" %}
+    {% for classroom in sidebar.listings %}
+        {% include "authenticated/sidebar/classroom.html" with classroom=classroom only %}
 	{% endfor %}
 {% endblock %}
