--- a/core/templates/authenticated/sidebar/teacher.html
+++ b/core/templates/authenticated/sidebar/teacher.html
@@ -1,8 +1,8 @@
 {% extends "authenticated/sidebar/base.html" %}
 {% block sidebar_content %}
-    {% if vm.sidebar.classroom_listings %}
+    {% if sidebar.classroom_listings %}
         <div><h6 class="sidebarheader header6">Class Rooms:</h6><br>
-            {% for listing in vm.sidebar.classroom_listings %}
+            {% for listing in sidebar.classroom_listings %}
                 {% for element in listing.elements %}
                     <a>{{ element.label }}</a> <br>
                 {% endfor %}
@@ -11,9 +11,9 @@
     {% endif %}
 
 
-    {% if vm.sidebar.subject_listings %}
+    {% if sidebar.subject_listings %}
         <div><h6 class="sidebarheader header6">Subject Rooms:</h6><br>
-            {% for listing in vm.sidebar.subject_listings %}
+            {% for listing in sidebar.subject_listings %}
                 {% for element in listing.elements %}
                     <a>{{ element.label }}</a><br>
                 {% endfor %}
