--- a/core/templates/authenticated/subject_id/base.html
+++ b/core/templates/authenticated/subject_id/base.html
@@ -8,13 +8,13 @@
 
 {% block authenticated_body %}
 
-{% include "authenticated/widgets/announcement_box.html" %} 
+    {% include "authenticated/widgets/announcement_box.html" with announcements=vm.authenticated_body.announcements only %}
 <br>
 {% block subjectroom_body %}{% endblock subjectroom_body %}
 <li id='subject_id' class='invisible'> {{ vm.authenticated_body.subject.pk}}</li>
 <div class='row'>
-    {% include "authenticated/widgets/active_assignment.html" %}
-    {% include "authenticated/widgets/graded_assignment.html" %}
+    {% include "authenticated/widgets/active_assignment.html" with active_assignments=vm.authenticated_body.active_assignments only %}
+    {% include "authenticated/widgets/graded_assignment.html" with graded_assignments=vm.authenticated_body.graded_assignments only %}
 </div>
 {% endblock authenticated_body %}
 
