--- a/core/templates/authenticated/subject_id/student.html
+++ b/core/templates/authenticated/subject_id/student.html
@@ -2,7 +2,7 @@
 
 {% load staticfiles %}
 {% block sidebar %}
-        {% include "authenticated/sidebar/student.html" %}
+    {% include "authenticated/sidebar/student.html" with sidebar=vm.sidebar only %}
 {% endblock %}
 
 {% block subjectroom_css %}{% endblock subjectroom_css %}
@@ -10,7 +10,7 @@
 {% block subjectroom_body %}
 
 <div class='col-md-10'>
-    {% include "authenticated/widgets/student_subjectroom_performance.html" %}
+    {% include "authenticated/widgets/student_subjectroom_performance.html" only %}
 </div>
 
 
