--- a/core/templates/authenticated/widgets/active_assignment.html
+++ b/core/templates/authenticated/widgets/active_assignment.html
@@ -16,7 +16,7 @@
                     </thead>
 
                     <tbody>
-                    {% for assignment in vm.authenticated_body.unfinished_assignments %}
+                    {% for assignment in active_assignments %}
                         <tr{% cycle '' ' class=\"even\"' %}>
                             <td>{{ assignment }}</td>
                             <td>{{ assignment.subjectRoom }}</td>
