--- a/core/templates/forgot_password/form.html
+++ b/core/templates/forgot_password/form.html
@@ -3,7 +3,7 @@
 {% block body %}
 <h4 class='well col-md-12'> Reset your Password</h4>
 <div class="indented_body_left">
-    <p> Enter your email id below. An Email will be sent to you with instructions on how to recover your passowrd </p>
+    <p> Enter your email id below. An Email will be sent to you with instructions on how to recover your password </p>
 </div>
 <form method="post" action='{% url 'forgot_password' %}'>
     {% csrf_token %}
