--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+o{% extends "base.html" %}
 
 {% load staticfiles %}
 
@@ -22,10 +22,10 @@
 
             <form action="{% url 'register' %}" method="post">{% csrf_token %}
                 {% for field in user_creation_form %}
-                    {% include "authenticated/utils/form_field.html" %}
+                    {% include "authenticated/utils/form_field.html" with field=field only %}
                 {% endfor %}
                 {% for field in user_info_form %}
-                    {% include "authenticated/utils/form_field.html" %}
+                    {% include "authenticated/utils/form_field.html" with field=field only %}
                 {% endfor %}
 
                 <input type="submit" value="Register"/>
