--- a/hwcentral/templates/base.html
+++ b/hwcentral/templates/base.html
@@ -7,7 +7,7 @@
 
     <!-- Title -->
 
-    <title>HW Central - {% block title %}Education For The New Generation{% endblock title %}</title>
+    <title>HW Central - {% block title %}{{ title }}{% endblock title %}</title>
 
     <!-- Meta -->
 
@@ -21,16 +21,17 @@
     <link rel="stylesheet" href="{% static 'css/base.css' %}" type="text/css"/>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css"/>
     <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static 'css/header/base.css' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'css/header.css' %}" type="text/css"/>
     <link rel="stylesheet" href="{% static 'css/jquery-ui.min.css' %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static 'css/jquery-ui.theme.min.css' %}" type="text/css"/> 
+    <link rel="stylesheet" href="{% static 'css/jquery-ui.theme.min.css' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'css/chosen/chosen.min.css' %}" type="text/css"/>
     {% block css %}{% endblock css %}
 
     <!-- Scripts -->
     <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/jquery-ui.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/chosen/chosen.jquery.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/chosen.jquery.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/base.js' %}"></script>
     
     {% block js %}{% endblock js %}
@@ -61,7 +62,7 @@
     <!-- Header -->
 
     {% block header %}
-        {% include "header.html" %}
+        {% include "header.html" with user=user only %}
     {% endblock header %}
 
     <!-- Body -->
@@ -72,7 +73,7 @@
     <!-- Footer -->
 
     {% block footer %}
-        {% include "footer.html" %}
+        {% include 'footer.html' only %}
     {% endblock footer %}
 
     
