changes made to charts,date_time_picker and success modal refactored to be like what was needed

--- a/core/templates/authenticated/home/base.html
+++ b/core/templates/authenticated/home/base.html
@@ -10,7 +10,9 @@
 
 {% include "authenticated/widgets/announcement_box.html" %} 
 <br>
-{% block home_body %}{% endblock home_body %}
+{% block home_body %}
+{% endblock home_body %}
+{% include "authenticated/widgets/success_message.html" %}
 
 {% endblock authenticated_body %}
 
