--- a/core/templates/authenticated/home/student.html
+++ b/core/templates/authenticated/home/student.html
@@ -8,7 +8,6 @@
 
 {% block home_css %}
     <link rel="stylesheet" href="{% static "css/home/student.css" %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static "css/maths_toolbox.css" %}" type="text/css"/>
 {% endblock home_css %}
 
 {% block home_body %}
@@ -17,10 +16,9 @@
 <div class='col-md-10'>
     {% include "authenticated/widgets/student_performance.html" %}
     {% include "authenticated/widgets/printable_performance.html" %}
-    {% include "authenticated/widgets/maths_toolbox.html" %}
     {% include "authenticated/widgets/section_chart_popup.html" %}
-    {% include "authenticated/widgets/date_time_picker.html" %}
     {% include "authenticated/widgets/success_message.html" %}
+</div>
 </div>    <!-- Assignment Div -->
 
 <div class='row'>
@@ -35,6 +33,5 @@
     <script type="text/javascript" src="{% static "js/printbutton.js" %}"></script> 
     <script type="text/javascript" src="{% static "js/charts/section_assignment_performance.js" %}"></script>
     <script type="text/javascript" src="{% static "js/charts/performance_report.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/charts/performance_breakdown.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/maths_toolbox.js" %}"></script>          
+    <script type="text/javascript" src="{% static "js/charts/performance_breakdown.js" %}"></script>       
 {% endblock home_js %}
