--- a/core/templates/authenticated/home/student.html
+++ b/core/templates/authenticated/home/student.html
@@ -17,9 +17,8 @@
     {% include "authenticated/widgets/student_performance.html" %}
     {% include "authenticated/widgets/printable_performance.html" %}
     {% include "authenticated/widgets/section_chart_popup.html" %}
-</div>
-</div>    <!-- Assignment Div -->
-
+</div>    
+    <!-- Assignment Div -->
 <div class='row'>
     {% include "authenticated/widgets/active_assignment.html" %}
     {% include "authenticated/widgets/graded_assignment.html" %}
@@ -28,9 +27,10 @@
 {% endblock home_body %}
 
 {% block home_js %}
-    
     <script type="text/javascript" src="{% static "js/printbutton.js" %}"></script> 
     <script type="text/javascript" src="{% static "js/charts/section_assignment_performance.js" %}"></script>
     <script type="text/javascript" src="{% static "js/charts/performance_report.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/charts/performance_breakdown.js" %}"></script>       
+    <script type="text/javascript" src="{% static "js/charts/performance_breakdown.js" %}"></script> 
+
+
 {% endblock home_js %}
