--- a/core/templates/authenticated/widgets/date_time_picker.html
+++ b/core/templates/authenticated/widgets/date_time_picker.html
@@ -1,26 +1,28 @@
-<div class="pickadate">
-    <div class='col-md-3'>
-        <h6 class="header header6"> Assigned Date </h6>
-        <input id='assigned_date' class="date_picker">
-        <span class="input_box_graphic">
-            <span class="glyphicon glyphicon-calendar"> </span>
-        </span>   
-        </br>
-        <input class="time_picker">
-        <span class="input_box_graphic">
-            <span class="glyphicon glyphicon-time"> </span>
-        </span>   
-    </div>
-    <div class='col-md-3'>
-        <h6 class="header header6"> Submission Date </h6>
-        <input id="submission_date" class="date_picker">
-        <span class="input_box_graphic">
-            <span class="glyphicon glyphicon-calendar"> </span>
-        </span>   
-        </br>
-        <input class="time_picker">
-        <span class="input_box_graphic">
-            <span class="glyphicon glyphicon-time"> </span>
-        </span>   
+<div id="date_assigner">
+    <div class="pickadate">
+        <div class='col-md-3'>
+            <h6 class="header header6"> Assigned Date </h6>
+            <input id='assigned_date' class="date_picker">
+            <span class="input_box_graphic">
+                <span class="glyphicon glyphicon-calendar"> </span>
+            </span>   
+            </br>
+            <input class="time_picker">
+            <span class="input_box_graphic">
+                <span class="glyphicon glyphicon-time"> </span>
+            </span>   
+        </div>
+        <div class='col-md-3'>
+            <h6 class="header header6"> Submission Date </h6>
+            <input id="submission_date" class="date_picker">
+            <span class="input_box_graphic">
+                <span class="glyphicon glyphicon-calendar"> </span>
+            </span>   
+            </br>
+            <input class="time_picker">
+            <span class="input_box_graphic">
+                <span class="glyphicon glyphicon-time"> </span>
+            </span>   
+        </div>
     </div>
 </div>
