changes to make ticker viewport change to active assignments on click

--- a/core/static/css/authenticated_base.css
+++ b/core/static/css/authenticated_base.css
@@ -1,4 +1,11 @@
 /* Headers */
+#ticker{
+    font-size: 5vw;
+    text-align: center;
+    margin-left: 20px;
+    vertical-align: center;
+}
+
 .header{
     font-family: Georgia, serif;
     color: #000;
