minor footer tweaks for deploy

--- a/hwcentral/templates/footer.html
+++ b/hwcentral/templates/footer.html
@@ -1,9 +1,8 @@
 <div class='navbar navbar-inverse navbar-static-bottom'>
-    <p class='indented_body_right navbar-brand navbar-right'>  &copy HWCentral 2015 </p>
+    <p class='indented_body_right navbar-brand navbar-right'> &copy HWCentral 2015 </p>
 
     <ul class="nav navbar-nav footer">
         <li><a href="{% url 'about' %}">About Us</a></li>
-        <li><a href="mailto:contact@hwcentral.in">Email : contact@hwcentral.in</a>
-        <li>
+        <li><a href="mailto:contact@hwcentral.in">Email : contact@hwcentral.in</a></li>
     </ul>
 </div>
